tests/negative/neg_pr118i_enum_character_literal.safe
package neg_pr118i_enum_character_literal

   type mark is ('a', 'b')
